css/all.css
/* ... */
.top {
  position: fixed;
  bottom: 5vh;
  right: 5vw;
}
.top a {
  color: #fff;
  width: 71px;
  height: 71px;
  line-height: 71px;
  display: block;
  text-align: center;
  background: #56C4C5;
  border-radius: 100%;
  font-weight: bold;
  border: 1px solid #56C4C5;
  font-family: "Wendy One";
}
.top a:hover {
  background: #fff;
  color: #56C4C5;
}

@media (max-width: 768px) {
  .top a {
    width: 50px;
    height: 50px;
    line-height: 50px;
    font-size: 14px;
  }
}
.header {
  height: 100vh;
  background-image: url("../images/home.svg"), url("../images/bg_home.svg");
  background-repeat: no-repeat;
  background-size: auto 70%, auto 100%;
  background-position: center right 7vw, right;
}
.header .content {
  height: 70vh;
  padding: 158px 0;
}
.header .content h1 {
  color: #56C4C5;
}

@media (max-width: 768px) {
  .header {
    background-image: url("../images/home.svg"), url("../images/bg_home_sm.svg");
    background-size: 80vw auto, 89vw auto;
    background-position: bottom 10vh center;
  }
  .header .content {
    padding: 0 20px;
  }
}
.header-bar {
  max-width: 1088px;
  margin: 0 auto;
  padding: 24px 0;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}
.header-bar .logo img {
  height: 40px;
}
.header-bar .programFee {
  padding: 8px 32px;
  border-radius: 22px;
  background: #FF5D50;
  color: #fff;
  line-height: 24px;
  border: 1px solid #FF5D50;
}
.header-bar .programFee:hover {
  background: #fff;
  color: #FF5D50;
}

@media (max-width: 768px) {
  .header-bar {
    background: #fff;
    border-bottom: 2px solid #FFD153;
    padding: 24px 10vw;
  }
  .header-bar .logo img {
    height: 24px;
  }
}
.platform {
  text-align: center;
}
.platform ul {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}
.platform ul li {
  text-align: center;
  width: 28%;
}
.platform ul li img {
  width: 90px;
  margin-right: auto;
  margin-left: auto;
}
.platform ul li p {
  color: #747474;
}

@media (max-width: 768px) {
  .platform {
    width: 80vw;
  }
  .platform ul {
    display: block;
  }
  .platform ul li {
    width: 100%;
  }
  .platform ul li img {
    width: 60px;
  }
}
.role {
  text-align: center;
}
.role ul {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}
.role ul li {
  width: 23.5%;
}
.role ul li .roleBody {
  padding: 16px 16px 24px;
}
.role ul li img {
  border-radius: 12px 12px 0px 0px;
}
.role ul li h3 {
  color: #56C4C5;
  font-weight: bold;
}

@media (max-width: 768px) {
  .role ul {
    width: 67vw;
    margin: 0 auto;
    -ms-flex-wrap: wrap;
        flex-wrap: wrap;
  }
  .role ul li {
    width: 100%;
  }
}
.feature {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: reverse;
      -ms-flex-direction: row-reverse;
          flex-direction: row-reverse;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}
.feature .featureContent {
  width: 45%;
}
.feature ul {
  width: 45%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  gap: 18px 28px;
}
.feature ul li {
  width: 230px;
  padding: 32px 32px 48px;
}
.feature ul li .icon {
  width: 86px;
  height: 86px;
  background-repeat: no-repeat;
  background-position: center;
  border-radius: 100%;
}
.feature ul li:first-child .icon {
  background-image: url("../images/icon01.svg");
}
.feature ul li:nth-child(2) .icon {
  background-image: url("../images/icon02.svg");
}
.feature ul li:nth-child(3) .icon {
  background-image: url("../images/icon03.svg");
}
.feature ul li:nth-child(4) .icon {
  background-image: url("../images/icon04.svg");
}
.feature ul li h3 {
  font-weight: bold;
}

@media (max-width: 768px) {
  .feature {
    display: block;
  }
  .feature .featureContent {
    text-align: center;
    width: 100%;
  }
  .feature ul {
    width: 100%;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
  }
  .feature ul li {
    padding: 32px 24px 48px;
  }
}
.evaluate {
  text-align: center;
}
.evaluate .userList {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  text-align: left;
}
.evaluate .userList > li {
  width: 32.5%;
  padding: 48px 32px 24px;
  position: relative;
}
.evaluate .userList > li p {
  padding-bottom: 24px;
  border-bottom: 1px solid #DDDDDD;
}
.evaluate .userList > li .userPic {
  background-size: contain;
  height: 80px;
  width: 80px;
  border-radius: 100%;
  position: absolute;
  top: -50px;
}
.evaluate .userList > li:first-child .userPic {
  background-image: url("../images/user01.jpg");
}
.evaluate .userList > li:nth-child(2) .userPic {
  background-image: url("../images/user02.jpg");
}
.evaluate .userList > li:nth-child(3) .userPic {
  background-image: url("../images/user03.jpg");
}
.evaluate .userBody {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  -webkit-box-align: end;
      -ms-flex-align: end;
          align-items: flex-end;
}
.evaluate .star {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}
.evaluate .star li {
  margin-right: 8px;
  height: 24px;
  padding-top: 4px;
}
/* ... */

